==> yhx-cl/smart_watch/STM32F407VET6_HAL_01 - lvgl/Core/Src/lcd.c <==
#include "lcd.h"
#include "spi.h"
#include "stdlib.h"
#include "font.h"
#include "image2lcd.h"

void LCD_INIT_CODE(void)
{
	LCD_WR_REG(0x11);

	HAL_Delay(120); // ms

	LCD_WR_REG(0x36);
	LCD_WR_DATA(0x00);

	LCD_WR_REG(0x3a);
	LCD_WR_DATA(0x55);
	//--------------------------------ST7789V Frame rate setting----------------------------------//
	LCD_WR_REG(0xb0);
	LCD_WR_DATA(0x11);
	LCD_WR_DATA(0xf0);
	LCD_WR_REG(0xb1);
	LCD_WR_DATA(0x40);
	LCD_WR_DATA(0x10);
	LCD_WR_DATA(0x12);

	LCD_WR_REG(0xb2);
	LCD_WR_DATA(0x0c);
	LCD_WR_DATA(0x0c);
	LCD_WR_DATA(0x00);
	LCD_WR_DATA(0x33);
	LCD_WR_DATA(0x33);

	LCD_WR_REG(0xb7);
	LCD_WR_DATA(0x75); // VGH=14.97  VGL=-10.43 //35

	LCD_WR_REG(0xbb);
	LCD_WR_DATA(0x19);

	LCD_WR_REG(0xc0);
	LCD_WR_DATA(0x2c);

	LCD_WR_REG(0xc2);
	LCD_WR_DATA(0x01);

	LCD_WR_REG(0xc3);
	LCD_WR_DATA(0x0b); // 10

	LCD_WR_REG(0xc4);
	LCD_WR_DATA(0x20);

	LCD_WR_REG(0xc6);
	LCD_WR_DATA(0x0f);

	LCD_WR_REG(0xd0);
	LCD_WR_DATA(0xa4);
	LCD_WR_DATA(0xa1);

	LCD_WR_REG(0xb0);
	LCD_WR_DATA(0x00);
	LCD_WR_DATA(0xd0);

	LCD_WR_REG(0xE0);
	LCD_WR_DATA(0x70);
	LCD_WR_DATA(0x04);
	LCD_WR_DATA(0x0C);
	LCD_WR_DATA(0x0E);
	LCD_WR_DATA(0x0E);
	LCD_WR_DATA(0x07);
	LCD_WR_DATA(0x32);
	LCD_WR_DATA(0x44);
	LCD_WR_DATA(0x44);
	LCD_WR_DATA(0x07);
	LCD_WR_DATA(0x10);
	LCD_WR_DATA(0x0E);
	LCD_WR_DATA(0x12);
	LCD_WR_DATA(0x16);

	LCD_WR_REG(0xE1);
	LCD_WR_DATA(0x70);
	LCD_WR_DATA(0x03);
	LCD_WR_DATA(0x0A);
	LCD_WR_DATA(0x0D);
	LCD_WR_DATA(0x0D);
	LCD_WR_DATA(0x1A);
	LCD_WR_DATA(0x33);
	LCD_WR_DATA(0x44);
	LCD_WR_DATA(0x44);
	LCD_WR_DATA(0x3F);
	LCD_WR_DATA(0x1C);
	LCD_WR_DATA(0x1B);
	LCD_WR_DATA(0x1D);
	LCD_WR_DATA(0x21);

	LCD_WR_REG(0x35);
	LCD_WR_DATA(0x00);

	LCD_WR_REG(0x29);
}

void LCD_WR_REG(u8 regval)
{
	LCD_RS_Set(GPIO_PIN_RESET);
	LCD_CS_Set(GPIO_PIN_RESET);

	HAL_SPI_Transmit(&hspi1, &regval,1, 0xffff);

	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_WR_DATA(u8 data)
{
	LCD_RS_Set(GPIO_PIN_SET);
	LCD_CS_Set(GPIO_PIN_RESET);

	HAL_SPI_Transmit(&hspi1,&data, 1, 0xffff);

	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_Display_Dir(u8 dir)
{
	if (dir == 0)
	{
		lcddev.dir = 0; // 竖屏
		lcddev.width = LCD_WIDTH;
		lcddev.height = LCD_HEIGHT;

		lcddev.wramcmd = 0X2C;
		lcddev.setxcmd = 0X2A;
		lcddev.setycmd = 0X2B;
		DFT_SCAN_DIR = U2D_R2L; // 竖显-设定显示方向
	}
	else // 横屏
	{
		lcddev.dir = 1;
		lcddev.width = LCD_HEIGHT;
		lcddev.height = LCD_WIDTH;

		lcddev.wramcmd = 0X2C;
		lcddev.setxcmd = 0X2A;
		lcddev.setycmd = 0X2B;
		DFT_SCAN_DIR = L2R_U2D; // 横显-设定显示方向
	}
	LCD_Scan_Dir(DFT_SCAN_DIR); // 默认扫描方向
}

void LCD_Clear(u16 color)
{
	u32 index = 0;
	u32 totalpoint = lcddev.width;
	totalpoint *= lcddev.height; // 得到总点数
	LCD_Set_Window(0, 0, lcddev.width, lcddev.height);
	LCD_WriteRAM_Prepare(); // 开始写入GRAM

	LCD_RS_Set(GPIO_PIN_SET);
	LCD_CS_Set(GPIO_PIN_RESET);

	for (index = 0; index < totalpoint; index++)
	{
#if (FAST == 0)
		LCD_WriteRAM(color);
#else
		// 使用以下代码可以提速
#if (Interface == I80_16BIT)
		DATAOUT(color);
		LCD_WR = 0;
		LCD_WR = 1;
#elif (Interface == D4WSPI)
		u8 data[2];
		data[0] = color >> 8;
		data[1] = color & 0xff;
		HAL_SPI_Transmit(&hspi1,data,2,0xffff);
#else
		DATAOUT(color >> 8);
		LCD_WR = 0;
		LCD_WR = 1;
		DATAOUT(color);
		LCD_WR = 0;
		LCD_WR = 1;
#endif
#endif
	}
	LCD_CS_Set(GPIO_PIN_SET);
}

void LCD_Fill(u16 sx, u16 sy, u16 ex, u16 ey, u16 color)
{
    u32 index = 0;
    u32 totalpoint = (ex - sx + 1) * (ey - sy + 1); // 计算总点数
    
    // 设置窗口
    LCD_Set_Window(sx, sy, ex - sx + 1, ey - sy + 1);
    LCD_WriteRAM_Prepare(); // 开始写入GRAM

    LCD_RS_Set(GPIO_PIN_SET);
    LCD_CS_Set(GPIO_PIN_RESET);

    // 填充颜色
    for (index = 0; index < totalpoint; index++)
    {
        LCD_WriteRAM(color);
    }
    
    LCD_CS_Set(GPIO_PIN_SET);
}
