==> Passionate0424/PSoC6_Lamp/Psoc6/applications/lcd_rtthread.c <==
#include "lcd_rtthread.h"
#include <rtthread.h>
#include <rtdevice.h>
#include <drv_common.h>
#include <drv_spi.h> /* 添加SPI驱动头文件 */
#include "font.h"    /* 包含字体数据头文件 */
#include "gt911.h"   /* 包含GT911触摸驱动头文件 */
#define DBG_TAG "lcd.rt"
#define DBG_LVL DBG_INFO
#include <rtdbg.h>

static void LCD_WR_REG(uint8_t reg)
{
    LCD_DC_CLR;
    rt_spi_send(lcd_dev, &reg, 1);
    LCD_DC_SET;
}

static void LCD_WR_DATA(uint8_t data)
{
    LCD_DC_SET;
    rt_spi_send(lcd_dev, &data, 1);
}

static void LCD_INIT_CODE(u8 dir)
{
    // LCD_BLK_CLR;
    LCD_WR_REG(0x11);
    rt_thread_mdelay(120); // Delay 120ms
    //------------------------------display and color format setting--------------------------------//
    LCD_WR_REG(0x36);
    LCD_WR_DATA(0x00);

    LCD_WR_REG(0x3a);
    LCD_WR_DATA(0x05);
    //--------------------------------ST7789V Frame rate setting----------------------------------//
    LCD_WR_REG(0xb2);
    LCD_WR_DATA(0x0c);
    LCD_WR_DATA(0x0c);
    LCD_WR_DATA(0x00);
    LCD_WR_DATA(0x33);
    LCD_WR_DATA(0x33);
    LCD_Display_Dir(dir);
    LCD_WR_REG(0xb7);
    LCD_WR_DATA(0x35);
    //---------------------------------ST7789V Power setting--------------------------------------//
    LCD_WR_REG(0xbb);
    LCD_WR_DATA(0x28);
    LCD_WR_REG(0xc0);
    LCD_WR_DATA(0x2c);
    LCD_WR_REG(0xc2);
    LCD_WR_DATA(0x01);
    LCD_WR_REG(0xc3);
    LCD_WR_DATA(0x10);
    LCD_WR_REG(0xc4);
    LCD_WR_DATA(0x20);
    LCD_WR_REG(0xc6);
    LCD_WR_DATA(0x0f);
    LCD_WR_REG(0xd0);
    LCD_WR_DATA(0xa4);
    LCD_WR_DATA(0xa1);
    //--------------------------------ST7789V gamma setting---------------------------------------//
    // 0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23
    LCD_WR_REG(0xe0);
    LCD_WR_DATA(0xd0);
    LCD_WR_DATA(0x00);
    LCD_WR_DATA(0x02);
    LCD_WR_DATA(0x07);
    LCD_WR_DATA(0x0a);
    LCD_WR_DATA(0x28);
    LCD_WR_DATA(0x32);
    LCD_WR_DATA(0x44);
    LCD_WR_DATA(0x42);
    LCD_WR_DATA(0x06);
    LCD_WR_DATA(0x0e);
    LCD_WR_DATA(0x12);
    LCD_WR_DATA(0x14);
    LCD_WR_DATA(0x17);
    // 0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23
    LCD_WR_REG(0xe1);
    LCD_WR_DATA(0xd0);
    LCD_WR_DATA(0x00);
    LCD_WR_DATA(0x02);
    LCD_WR_DATA(0x07);
    LCD_WR_DATA(0x0a);
    LCD_WR_DATA(0x28);
    LCD_WR_DATA(0x31);
    LCD_WR_DATA(0x54);
    LCD_WR_DATA(0x47);
    LCD_WR_DATA(0x0e);
    LCD_WR_DATA(0x1c);
    LCD_WR_DATA(0x17);
    LCD_WR_DATA(0x1b);
    LCD_WR_DATA(0x1e);
    LCD_WR_REG(0x29);
}

void LCD_Clear(uint16_t Color)
{
    uint32_t index;
    uint32_t total = lcddev.width * lcddev.height;

    LCD_SetWindows(0, 0, lcddev.width, lcddev.height);
    LCD_WriteRAM_Prepare(); // 开始写入GRAM

    // for (index = 0; index < total; index++)
    // {
    //     LCD_WR_DATA_16BIT(Color);
    // }
    for (index = 0; index < total; index++)
    {
#if (FAST == 0)
        LCD_WriteRAM(color);
#else
        // 使用以下代码可以提速

        uint8_t buf[2] = {Color >> 8, Color & 0xFF};
        rt_spi_send(lcd_dev, buf, 2);
#endif
    }
}

void LCD_Fill(u16 sx, u16 sy, u16 ex, u16 ey, u16 color)
{
    u16 i, j;
    u16 width = ex - sx + 1;
    u16 height = ey - sy + 1;

    LCD_SetWindows(sx, sy, width, height);
    for (i = 0; i < height; i++)
    {
        for (j = 0; j < width; j++)
        {
            LCD_WR_DATA_16BIT(color);
        }
    }
}

void LCD_Display_Dir(u8 dir)
{
    if (dir == 0)
    {
        lcddev.dir = 0; // 竖屏
        lcddev.width = LCD_W;
        lcddev.height = LCD_H;

        lcddev.wramcmd = 0X2C;
        lcddev.setxcmd = 0X2A;
        lcddev.setycmd = 0X2B;
        DFT_SCAN_DIR = U2D_R2L; // 竖显-设定显示方向
    }
    else // 横屏
    {
        lcddev.dir = 1;
        lcddev.width = LCD_H;
        lcddev.height = LCD_W;

        lcddev.wramcmd = 0X2C;
        lcddev.setxcmd = 0X2A;
        lcddev.setycmd = 0X2B;
        DFT_SCAN_DIR = L2R_U2D; // 横显-设定显示方向
    }
    LCD_Scan_Dir(DFT_SCAN_DIR); // 默认扫描方向
}
